--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/png" href="/icon128.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Imagine Something</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Faculty+Glyphic&family=Itim&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="manifest" href="assets/manifest.json" />
 	</head>
 	<body>
 		<div id="root"></div>
